traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime38.Snake
    if (getDirection==direction.EAST) {gauche;
                      ^